[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Images/MenuInicial.png" type="Texture" id=4]
[ext_resource path="res://Sounds/MenuSong.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 401, 201 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 307.0
margin_top = 90.0
margin_right = 492.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "Calvin's Adventure"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 800.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 200 )
alignment = 1

[node name="Start" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 51.0
margin_bottom = 81.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Option")
text = "Start"
arrow_margin_from_center = 45

[node name="Option" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 85.0
margin_bottom = 115.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Exit")
text = "Option"
arrow_margin_from_center = 55

[node name="Exit" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 119.0
margin_bottom = 149.0
focus_neighbour_top = NodePath("../Option")
focus_neighbour_bottom = NodePath("../Start")
text = "Exit"
arrow_margin_from_center = 40

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -21.022
autoplay = true

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
